# rules_ruby

./: .bazelignore  .gitignore  .rubocop.yml  BUILD.bazel  README.md  WORKSPACE
.circleci/: .bazelrc  config.yml
.github/: CODEOWNERS
examples/example_gem/: BUILD  WORKSPACE
examples/example_gem/lib/: BUILD
examples/example_gem/lib/foo/: BUILD
examples/simple_rails_api/: BUILD  BUILD.bazel  Gemfile  WORKSPACE
examples/simple_rails_api/app/controllers/: home_controller.rb
examples/simple_rails_api/config/: application.rb
examples/simple_script/: .rubocop.yml  BUILD.bazel  Gemfile  README.md  WORKSPACE  script.rb
examples/simple_script/lib/: BUILD  foo.rb
examples/simple_script/spec/lib/: foo_spec.rb
ruby/: defs.bzl  deps.bzl
ruby/private/: binary.bzl  binary_wrapper.tpl  bundle.bzl  constants.bzl  dependencies.bzl  gem.bzl  gemspec.bzl  library.bzl  providers.bzl  rspec.bzl  sdk.bzl
ruby/private/binary/: BUILD.bazel  binary.bzl  binary_launcher.tpl  binary_wrapper.tpl  main_binary_wrapper.tpl
ruby/private/bundle/: activate_gems.rb  bundle.bzl  create_bundle_build_file.rb  download_bundler.rb  download_gem.rb
ruby/private/gem/: BUILD.bazel  dest_path.bzl  gem.bzl  gem_runner.rb  gemspec.bzl  gemspec_builder.rb  gemspec_template.tpl
ruby/private/rubocop/: def.bzl  runner.sh.tpl
ruby/private/toolchains/: BUILD.runtime.tpl  ruby_runtime.bzl
ruby/private/tools/: deps.bzl  paths.bzl
ruby/tests/: BUILD.bazel  args_check.rb  diff_test.rb  include_order_check.rb  load_path_in_runfiles_test.rb
ruby/tests/gemspec/: BUILD.bazel  gemspec_test.bzl
ruby/tests/gemspec/expected/: example_gem.gemspec  licensed_gem.gemspec  require_gem.gemspec  strip_path_gem.gemspec
ruby/tests/gemspec/lib/: BUILD
ruby/tests/gemspec/lib/foo/: BUILD
ruby/tests/integration/: BUILD.bazel  WORKSPACE  script.rb
ruby/tests/integration/lib/: BUILD.bazel
ruby/tests/integration/spec/: script_spec.rb  spec_helper.rb
ruby/tests/testdata/: BUILD.bazel
ruby/tests/testdata/another_workspace/: WORKSPACE
ruby/tests/testdata/another_workspace/baz/qux/: BUILD.bazel
