load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//ruby:defs.bzl", "rubocop")

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/**/*"],
)

buildifier(
    name = "buildifier-check",
    exclude_patterns = ["./.git/**/*"],
    mode = "check",
)

rubocop(
    name = "rubocop",
    bin = "@bundle//:bin/rubocop",
    deps = [
        "@bundle//:rubocop",
    ],
)
