package(default_visibility = ["//:__subpackages__"])

load(
    "@coinbase_rules_ruby//ruby:defs.bzl",
    "rb_binary",
    "rb_library",
    "rb_rspec",
    "rb_test",
    "rubocop",
)

# A ruby script that is depending on a Gem and another folders rb_library
rb_binary(
    name = "bin",
    srcs = ["script.rb"],
    main = "script.rb",
    deps = [
        "//lib:foo",
        "@bundle//:awesome_print",
    ],
)

# This test example of how to run all tests with rspec.
# TODO: make a more bazel-esk way to run each test individually
rb_test(
    name = "all-specs",
    timeout = "short",
    srcs = [
        "script.rb",
        "//lib:foo",
    ] + glob([
        "spec/**/*.rb",
    ]),
    args = [
        "spec",
    ],
    main = "@bundle//:bin/rspec",
    deps = [
        "@bundle//:awesome_print",
        "@bundle//:rspec",
        "@bundle//:rspec-its",
    ],
)

# Rubocop rule
# To check
# bazel run rubocop -- -a
rubocop(
    name = "rubocop",
    bin = "@bundle//:bin/rubocop",
    deps = ["@bundle//:rubocop"],
)
