load("//ruby/tests/gemspec:gemspec_test.bzl", "gemspec_test")
load("//ruby:defs.bzl", "rb_gem")

gemspec_test(
    name = "licensed_test",
    authors = ["Coinbase"],
    gem_name = "licensed_gem",
    licenses = ["MIT"],
    version = "0.1.0",
    deps = [
        "//ruby/tests/gemspec/lib:example_gem",
    ],
)

gemspec_test(
    name = "example_test",
    authors = ["Coinbase"],
    gem_name = "example_gem",
    gem_runtime_dependencies = [
        "'example1', '~> 1.1', '>= 1.1.4'",
        "'example2', '~> 1.0'",
    ],
    version = "0.1.0",
    deps = [
        "//ruby/tests/gemspec/lib:example_gem",
    ],
)

gemspec_test(
    name = "require_test",
    authors = ["Coinbase"],
    gem_name = "require_gem",
    require_paths = ["ruby/tests/gemspec/lib/foo"],
    version = "0.1.0",
    deps = [
        "//ruby/tests/gemspec/lib:example_gem",
    ],
)
